# Lecture_CG

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
#0(Warming-Up)/: CMakeLists.txt
#0(Warming-Up)/Act_01/: CMakeLists.txt  Main.cpp
#0(Warming-Up)/Act_02/: CMakeLists.txt  Main.cpp
#0(Warming-Up)/Act_03/: CMakeLists.txt  Main.cpp
#0(Warming-Up)/Act_04/: CMakeLists.txt  Main.cpp
#0(Warming-Up)/Act_05/: CMakeLists.txt  Main.cpp
#0(Warming-Up)/Act_06/: CMakeLists.txt  Main.cpp
#0_Warming_Up/Act_01/: CMakeLists.txt
#0_Warming_Up/Act_02/: CMakeLists.txt
#0_Warming_Up/Act_03/: Program.cpp
#0_Warming_Up/Act_04/: CMakeLists.txt  Program.cpp
#0_Warming_Up/Act_05/: CMakeLists.txt
#0_Warming_Up/Act_06/: CMakeLists.txt
#1_OpenGL_Basic_1/: CMakeLists.txt
#1_OpenGL_Basic_1/Act_02/: CMakeLists.txt
#1_OpenGL_Basic_1/Act_03/: Program.cpp
#1_OpenGL_Basic_1/Act_04/: Program.cpp
#1_OpenGL_Basic_1/Act_05/: CMakeLists.txt  Program.cpp
Homework/: Homework_CG.sln  Homework_CG.vcxproj  Homework_CG.vcxproj.filters  README.txt  vcpkg.json
Homework/Sources/: AABB.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Light.cpp  Light.h  Main.cpp  Mesh.cpp  Mesh.h  Mountain.cpp  Mountain.h  Object.cpp  Object.h  PCH.h  Player.cpp  Player.h  Random.cpp  Random.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Stage.cpp  Stage.h  Transform.h  Wall.cpp  Wall.h
Level_00/: CMakeLists.txt
Level_01/: CMakeLists.txt
Level_01/Act_01/: CMakeLists.txt  Program.cpp
Level_01/Act_02/: CMakeLists.txt  Program.cpp
Level_01/Act_03/: CMakeLists.txt  Program.cpp
Level_01/Act_04/: CMakeLists.txt  Program.cpp
Level_01/Act_05/: CMakeLists.txt  Program.cpp
Level_01/Act_06/: CMakeLists.txt  Program.cpp
Level_01/Act_07/: CMakeLists.txt  NewTemp.cpp  Program.cpp
Level_01/Act_08/: CMakeLists.txt  Program.cpp
Level_01/Act_09/: CMakeLists.txt  Program.cpp  Vertex.glsl
Level_01/Act_10/: CMakeLists.txt  Fragment.glsl  Program.cpp
Level_01/Act_11/: CMakeLists.txt  Program.cpp  Program2.cpp
Level_01/Act_12/: CMakeLists.txt  Main.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h
Level_01/Act_13/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  Shader.h  Shape.cpp  Shape.h
Level_01/Act_14/: CMakeLists.txt  Program.cpp  Vertex.glsl
Level_01/Act_15/: CMakeLists.txt  Main.cpp  Program.cpp
Level_01/Act_15/Framework/: Window.h
Level_01/Act_15/Framework/Graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
Level_01/Act_15/Framework/Misc/: File.cpp  File.h
Level_01/Act_16/: CMakeLists.txt  Program.cpp
Level_01/Act_16/Resources/Shaders/: Vertex.glsl
Level_01/Act_17/: CMakeLists.txt  Program.cpp
Level_01/Act_17/Resources/Shaders/: Fragment.glsl
Level_01/Act_18/: CMakeLists.txt  Program.cpp
Level_01/Act_18/Resources/Shaders/: Fragment.glsl  Vertex.glsl
Level_01/Act_18/Sources/: Main.cpp  Program.cpp
Level_01/Act_18/Sources/Core/: Application.cpp  Application.h  File.cpp  Input.cpp  Input.h  Time.h
Level_01/Act_18/Sources/Graphics/: Mesh.cpp  Mesh.h  Shader.h
Level_01/Act_18/Sources/Objects/: Axes.cpp  Axes.h  Cone.h  Cube.cpp  Cube.h  Object.cpp  Object.h  Planet.cpp  Planet.h
Level_01/Act_18/Sources/Rendering/: Camera.cpp  Camera.h  Cylinder.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h
Level_01/Act_18/Sources/World/: World.cpp  World.h
Level_01/Act_19/: CMakeLists.txt
Level_01/Act_19/Resources/Shaders/: Vertex.glsl
Level_01/Act_19/Sources/: Main.cpp  Program.cpp
Level_01/Act_19/Sources/Core/: Application.cpp  Application.h  File.h  Input.cpp  Time.cpp  Time.h
Level_01/Act_19/Sources/Graphics/: Camera.cpp  Camera.h  Shader.cpp
Level_01/Act_19/Sources/Objects/: Axes.cpp  Axes.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Object.cpp  Object.h  Planet.cpp  Planet.h
Level_01/Act_19/Sources/Rendering/: Camera.cpp  Camera.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h
Level_01/Act_19/Sources/World/: World.cpp  World.h
Level_01/Act_20/: CMakeLists.txt
Level_01/Act_20/Sources/: Application.cpp  Application.h  Camera.cpp  Camera.h  File.h  Input.cpp  Input.h  Main.cpp  Mesh.h  Tank.cpp  Tank.h
Level_01/Act_21/: CMakeLists.txt
Level_01/Act_21/Resources/Shaders/: Fragment.frag
Level_01/Act_21/Sources/: Application.cpp  Application.h  Block.cpp  Block.h  Box.cpp  Box.h  Camera.cpp  Camera.h  CollisionBox.h  Cube.cpp  Cube.h  Input.cpp  Input.h  Main.cpp  Marble.cpp  Marble.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PCH.h  Shader.cpp  Shader.h  Stage.cpp  Stage.h
Level_01/Act_22/: CMakeLists.txt  Main.cpp
Level_01/Act_23/: CMakeLists.txt
Level_01/Act_23/Resources/Shaders/: Vertex.vert
Level_01/Act_23/Sources/: Camera.cpp  Camera.h  File.cpp  Input.cpp  Main.cpp  Mesh.cpp  Mesh.h  Object.h
Level_01/Act_25/: CMakeLists.txt
Level_01/Act_25/Resources/Shaders/: Fragment.frag
Level_01/Act_25/Sources/: Input.h  Main.cpp  Mesh.h  Object.h
Level_01/Act_26/: CMakeLists.txt
Level_01/Act_26/Resources/Shaders/: Fragment.frag
Level_01/Act_26/Sources/: Main.cpp  Mesh.cpp  Object.cpp  PCH.h  Shader.cpp
Level_01/Act_27/: CMakeLists.txt
Level_01/Act_27/Sources/: Application.cpp  Object.h
Level_01/Act_28/: CMakeLists.txt
Level_01/Act_28/Resources/Shaders/: Vertex.vert
Level_01/Act_28/Sources/: Camera.cpp  Light.h  Main.cpp  Object.cpp  Shader.cpp  Tank.cpp  Tank.h
Level_01/Act_29/: CMakeLists.txt
Level_01/Act_29/Resources/Shaders/: Standard.vert  Texture.frag
Level_01/Act_29/Sources/: Application.cpp  Application.h  Camera.cpp  Main.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
Level_01/Act_30/: CMakeLists.txt
Level_01/Act_30/Resources/Shaders/: Texture.vert
Level_01/Act_30/Sources/: Camera.h  Input.cpp  Light.cpp  Main.cpp  Mesh.h  Object.cpp  Object.h  PCH.h  Shader.h  Texture.h
Level_02/: CMakeLists.txt
Level_02/Act_02/: CMakeLists.txt  Program.cpp
TestProject/: CMakeLists.txt
(+10 files in other folders)
