find_package(OpenGL          REQUIRED)
find_package(GLEW     CONFIG REQUIRED)
find_package(glad     CONFIG REQUIRED)
find_package(glfw3    CONFIG REQUIRED)
find_package(glm      CONFIG REQUIRED)
find_package(freeglut CONFIG REQUIRED)
find_package(spdlog   CONFIG REQUIRED)

add_subdirectory("Act_01")
add_subdirectory("Act_02")
add_subdirectory("Act_03")
add_subdirectory("Act_04")
add_subdirectory("Act_05")
add_subdirectory("Act_06")
add_subdirectory("Act_07")
add_subdirectory("Act_08")
add_subdirectory("Act_09")
add_subdirectory("Act_10")
add_subdirectory("Act_11")
add_subdirectory("Act_12")
add_subdirectory("Act_13")
add_subdirectory("Act_14")
add_subdirectory("Act_15")
add_subdirectory("Act_16")
add_subdirectory("Act_17")
add_subdirectory("Act_18")
add_subdirectory("Act_19")
add_subdirectory("Act_20")
add_subdirectory("Act_21")
add_subdirectory("Act_22")
add_subdirectory("Act_23")
add_subdirectory("Act_25")
add_subdirectory("Act_26")
add_subdirectory("Act_27")
add_subdirectory("Act_28")
add_subdirectory("Act_29")
add_subdirectory("Act_30")